--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.phpunit.cache
 /node_modules
-/public/build
+# /public/build
 /public/hot
 /public/storage
 /storage/*.key
@@ -18,6 +18,5 @@ npm-debug.log
 yarn-error.log
 /.fleet
 /.idea
-/.nova
 /.vscode
 /.zed
